@@ -26,11 +26,11 @@
 #ifndef SchemeRegistry_h
 #define SchemeRegistry_h
 
+#include "PlatformString.h"
 #include <wtf/HashSet.h>
 #include <wtf/text/StringHash.h>
-#include <wtf/text/WTFString.h>
 
-namespace Platform {
+namespace WebCore {
 
 typedef HashSet<String, CaseFoldingHash> URLSchemesMap;
 
@@ -81,7 +81,5 @@ public:
 };
 
 } // namespace WebCore
-
-using Platform::SchemeRegistry;
 
 #endif // SchemeRegistry_h
